--- a/code/Abstracte code/ESP32 Waterventiel + knoppen + led's/platformio.ini
+++ b/code/Abstracte code/ESP32 Waterventiel + knoppen + led's/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.12.3
 	paulstoffregen/TimeAlarms@0.0.0-alpha+sha.c291c1ddad
 	paulstoffregen/Time@^1.6.1
+	fastled/FastLED@^3.9.4
 monitor_speed = 115200
 monitor_port = COM5
 upload_port = COM5
