--- a/code/ESP32 Waterventiel + knoppen + led's/platformio.ini
+++ b/code/ESP32 Waterventiel + knoppen + led's/platformio.ini
@@ -16,6 +16,9 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.12.3
 	paulstoffregen/TimeAlarms@0.0.0-alpha+sha.c291c1ddad
 	paulstoffregen/Time@^1.6.1
+	bblanchon/ArduinoJson@^7.2.1
+	mbed-kazushi2008/HTTPClient@0.0.0+sha.cf5d7427a9ec
+	; arduino-libraries/WiFi@^1.2.7
 monitor_speed = 115200
 monitor_port = COM5
 upload_port = COM5
